--- a/FinalProject/SECOND TAB/MediaController.xib
+++ b/FinalProject/SECOND TAB/MediaController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,41 +18,44 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="cameraView">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Al-P6-gMj">
-                    <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Al-P6-gMj">
+                    <rect key="frame" x="0.0" y="10" width="1024" height="1346"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ny6-ua-hAl">
-                    <rect key="frame" x="16" y="366" width="46" height="30"/>
-                    <state key="normal" title="Button"/>
-                    <connections>
-                        <action selector="selectPhoto:" destination="-1" eventType="touchUpInside" id="Iao-od-fA1"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="msJ-cp-RfF">
-                    <rect key="frame" x="137" y="339" width="46" height="30"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="msJ-cp-RfF">
+                    <rect key="frame" x="162.66666666666666" y="617" width="50" height="50"/>
+                    <state key="normal" image="icons8-Camera-50"/>
                     <connections>
                         <action selector="takePhoto:" destination="-1" eventType="touchUpInside" id="UgB-rP-AsG"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ny6-ua-hAl">
+                    <rect key="frame" x="0.0" y="625" width="113" height="34"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                    <state key="normal" title="Select Image">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="selectPhoto:" destination="-1" eventType="touchUpInside" id="Iao-od-fA1"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="msJ-cp-RfF" firstAttribute="centerX" secondItem="zvG-RT-PWF" secondAttribute="centerX" id="0C3-T8-X2W"/>
-                <constraint firstItem="zvG-RT-PWF" firstAttribute="top" secondItem="5Al-P6-gMj" secondAttribute="top" id="EaM-5k-1u5"/>
-                <constraint firstItem="Ny6-ua-hAl" firstAttribute="leading" secondItem="zvG-RT-PWF" secondAttribute="leading" constant="16" id="L2z-mx-VSh"/>
-                <constraint firstItem="zvG-RT-PWF" firstAttribute="trailing" secondItem="5Al-P6-gMj" secondAttribute="trailing" id="McM-7d-bzu"/>
-                <constraint firstItem="zvG-RT-PWF" firstAttribute="bottom" secondItem="Ny6-ua-hAl" secondAttribute="bottom" constant="84" id="bgP-Y3-Dr6"/>
-                <constraint firstItem="5Al-P6-gMj" firstAttribute="leading" secondItem="zvG-RT-PWF" secondAttribute="leading" id="sxI-Sf-gxb"/>
+                <constraint firstItem="Ny6-ua-hAl" firstAttribute="leading" secondItem="zvG-RT-PWF" secondAttribute="leading" id="L2z-mx-VSh"/>
+                <constraint firstItem="zvG-RT-PWF" firstAttribute="bottom" secondItem="Ny6-ua-hAl" secondAttribute="bottom" constant="119" id="bgP-Y3-Dr6"/>
                 <constraint firstItem="zvG-RT-PWF" firstAttribute="bottom" secondItem="msJ-cp-RfF" secondAttribute="bottom" constant="111" id="z6Y-bx-zIG"/>
-                <constraint firstItem="zvG-RT-PWF" firstAttribute="bottom" secondItem="5Al-P6-gMj" secondAttribute="bottom" id="zVH-vK-dzO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="zvG-RT-PWF"/>
-            <point key="canvasLocation" x="35.5" y="54.5"/>
+            <point key="canvasLocation" x="35" y="54"/>
         </view>
     </objects>
+    <resources>
+        <image name="icons8-Camera-50" width="50" height="50"/>
+    </resources>
 </document>
